feat(vclight-cli): support netlify
template sync with https://github.com/Bluemangoo/VCLight-Example/commit/3fae795b2c9348787291e1ac697808a26717e44f

--- a/packages/vclight-cli/files/.gitignore.ejs
+++ b/packages/vclight-cli/files/.gitignore.ejs
@@ -1,11 +1,15 @@
 <%if(template.gitignore){-%>
 # Project Configs
-.idea/
+.idea
 
 # Node Modules
-node_modules/
+node_modules
 
-# Lock File
-package-lock.json
-pnpm-lock.yaml
+# Cache
+<%if(template.vercel){-%>
+.vercel
+<%}-%>
+<%if(template.netlify){-%>
+.netlify
+<%}-%>
 <%}%>
