--- a/packages/vclight-cli/files/vercel.json.ejs
+++ b/packages/vclight-cli/files/vercel.json.ejs
@@ -1,3 +1,4 @@
+<%if(template.vercel){-%>
 {
   "builds": [
     {
@@ -8,7 +9,8 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/main.ts"
+      "dest": "src/vercelHandler.ts"
     }
   ]
 }
+<%}%>
