fix(vclight-cli): fix netlify functions

--- a/packages/vclight-cli/files/src/app/app.ts.ejs
+++ b/packages/vclight-cli/files/src/app/app.ts.ejs
@@ -1,6 +1,7 @@
 import VCLight from "vclight";
 <%if(template.router){-%>
 import router from "./router";
+import "./initRouter";
 <%}-%>
 
 const app = new VCLight();
