fix(vclight-cli): fix template

--- a/packages/vclight-cli/files/src/app/routers/favicon.ts.ejs
+++ b/packages/vclight-cli/files/src/app/routers/favicon.ts.ejs
@@ -4,6 +4,6 @@ import { readFileSync } from "fs";
 
 router.on("/favicon.ico", async function(data, response) {
     response.contentType = "image/x-icon";
-    response.response = readFileSync(process.cwd() + "/public/favicon.ico");
+    response.response = readFileSync(process.cwd() + "/public/favicon.ico", "utf-8");
 });
 <%}%>
