--- a/packages/vclight-cli/files/src/app/routers/index.ts.ejs
+++ b/packages/vclight-cli/files/src/app/routers/index.ts.ejs
@@ -4,6 +4,6 @@ import { readFileSync } from "fs";
 
 router.on("/", async function(data, response) {
     response.contentType = "text/html";
-    response.response = readFileSync(process.cwd() + "/public/index.html");
+    response.response = readFileSync(process.cwd() + "/public/index.html", "utf-8");
 });
 <%}%>
