--- a/packages/vclight-cli/files/vercel.json.ejs
+++ b/packages/vclight-cli/files/vercel.json.ejs
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/vercelHandler.ts"
+      "dest": "src/vercelEntry.ts"
     }
   ]
 }
