feat(vclight-cli): sync template with https://github.com/Bluemangoo/VCLight-Example/commit/6c6465229def523c4acd2efd97e8ff06728ef7ca

--- a/packages/vclight-cli/files/.prettierignore.ejs
+++ b/packages/vclight-cli/files/.prettierignore.ejs
@@ -1,9 +1,11 @@
 <%if(template.prettier){-%>
-/.idea
-/node_modules
-/vercel
-.env
-package-lock.json
-yarn.lock
+# Project Configs
+.idea
+
+# Node Modules
+node_modules
+
+# Cache
 .vercel
+.netlify
 <%}%>
