refactor: migrate `vclight-cli` to `@vclight/cli`

--- a/packages/vclight-cli/files/src/app/router.ts.ejs
+++ b/packages/vclight-cli/files/src/app/router.ts.ejs
@@ -1,5 +1,5 @@
 <%if(template.router){-%>
-import VCLightRouter from "vclight-router";
+import VCLightRouter from "@vclight/router";
 
 const router = new VCLightRouter();
 export default router;
